// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentPackApplyParameter /> should render with full props 1`] = `
<div>
  <form
    className="apply-parameter-form"
    id="apply-parameter-form"
    onSubmit={[Function]}
  >
    <div
      className="applyParameter row"
    >
      <div
        className="col-sm-5 col-sm-offset-1"
      >
        <div
          className="form-group"
        >
          <label
            className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
            htmlFor="config_key"
          >
            Config Key
          </label>
          <span>
            <select
              className="FormControl-sc-1amoaox-0 hdNTyr form-control"
              id="config_key"
              label="Config Key"
              name="config_key"
              onChange={[Function]}
              placeholder=""
              required={true}
              type="select"
              value=""
            >
              <option
                value=""
              >
                Choose Config Key
              </option>
              <option
                value="configuration.listen_address"
              >
                configuration.listen_address
              </option>
              <option
                value="name"
              >
                name
              </option>
              <option
                value="title"
              >
                title
              </option>
            </select>
            
          </span>
        </div>
      </div>
      <div
        className="col-sm-5"
      >
        <div
          className="form-group"
        >
          <label
            className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
            htmlFor="parameter"
          >
            Parameter
          </label>
          <span>
            <select
              className="FormControl-sc-1amoaox-0 hdNTyr form-control"
              id="parameter"
              label="Parameter"
              name="parameter"
              onChange={[Function]}
              placeholder=""
              required={true}
              type="select"
              value=""
            >
              <option
                value=""
              >
                Choose...
              </option>
              <option
                value="PORT"
              >
                Port
                 (
                PORT
                )
              </option>
            </select>
            
          </span>
        </div>
      </div>
      <div
        className="col-sm-1"
      />
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-2 col-sm-offset-10"
      >
        <button
          className="Button-c9cbmb-0 GLfOY btn btn-primary"
          disabled={true}
          type="submit"
        >
          Apply
        </button>
      </div>
    </div>
  </form>
  <div
    className="row"
  >
    <div
      className="col-sm-10 col-sm-offset-1"
    >
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="config-key-list"
            >
              <table
                className="table "
              >
                <thead>
                  <tr>
                    <th>
                      Config Key
                    </th>
                    <th>
                      Parameter
                    </th>
                    <th>
                      Action
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      configuration.port
                    </td>
                    <td>
                      PORT
                    </td>
                    <td>
                      <button
                        className="Button-c9cbmb-0 GLfOY btn btn-sm btn-info"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        Clear
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ContentPackApplyParameter /> should render with minimal props 1`] = `
<div>
  <form
    className="apply-parameter-form"
    id="apply-parameter-form"
    onSubmit={[Function]}
  >
    <div
      className="applyParameter row"
    >
      <div
        className="col-sm-5 col-sm-offset-1"
      >
        <div
          className="form-group"
        >
          <label
            className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
            htmlFor="config_key"
          >
            Config Key
          </label>
          <span>
            <select
              className="FormControl-sc-1amoaox-0 hdNTyr form-control"
              id="config_key"
              label="Config Key"
              name="config_key"
              onChange={[Function]}
              placeholder=""
              required={true}
              type="select"
              value=""
            >
              <option
                value=""
              >
                Choose Config Key
              </option>
              <option
                value="configuration.listen_address"
              >
                configuration.listen_address
              </option>
              <option
                value="configuration.port"
              >
                configuration.port
              </option>
              <option
                value="name"
              >
                name
              </option>
              <option
                value="title"
              >
                title
              </option>
            </select>
            
          </span>
        </div>
      </div>
      <div
        className="col-sm-5"
      >
        <div
          className="form-group"
        >
          <label
            className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
            htmlFor="parameter"
          >
            Parameter
          </label>
          <span>
            <select
              className="FormControl-sc-1amoaox-0 hdNTyr form-control"
              id="parameter"
              label="Parameter"
              name="parameter"
              onChange={[Function]}
              placeholder=""
              required={true}
              type="select"
              value=""
            >
              <option
                value=""
              >
                Create a parameter first
              </option>
            </select>
            
          </span>
        </div>
      </div>
      <div
        className="col-sm-1"
      />
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-2 col-sm-offset-10"
      >
        <button
          className="Button-c9cbmb-0 GLfOY btn btn-primary"
          disabled={true}
          type="submit"
        >
          Apply
        </button>
      </div>
    </div>
  </form>
  <div
    className="row"
  >
    <div
      className="col-sm-10 col-sm-offset-1"
    >
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="config-key-list"
            >
              <p>
                No data available.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ContentPackApplyParameter /> should render with readOnly 1`] = `
<div>
  <form
    className="apply-parameter-form"
    id="apply-parameter-form"
    onSubmit={[Function]}
  >
    <div
      className="applyParameter row"
    >
      <div
        className="col-sm-5 col-sm-offset-1"
      >
        <div
          className="form-group"
        >
          <label
            className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
            htmlFor="config_key"
          >
            Config Key
          </label>
          <span>
            <select
              className="FormControl-sc-1amoaox-0 hdNTyr form-control"
              id="config_key"
              label="Config Key"
              name="config_key"
              onChange={[Function]}
              placeholder=""
              required={true}
              type="select"
              value=""
            >
              <option
                value=""
              >
                Choose Config Key
              </option>
              <option
                value="configuration.listen_address"
              >
                configuration.listen_address
              </option>
              <option
                value="name"
              >
                name
              </option>
              <option
                value="title"
              >
                title
              </option>
            </select>
            
          </span>
        </div>
      </div>
      <div
        className="col-sm-5"
      >
        <div
          className="form-group"
        >
          <label
            className="ControlLabel-sc-1edmum5-0 iZJNbd control-label"
            htmlFor="parameter"
          >
            Parameter
          </label>
          <span>
            <select
              className="FormControl-sc-1amoaox-0 hdNTyr form-control"
              id="parameter"
              label="Parameter"
              name="parameter"
              onChange={[Function]}
              placeholder=""
              required={true}
              type="select"
              value=""
            >
              <option
                value=""
              >
                Choose...
              </option>
              <option
                value="PORT"
              >
                Port
                 (
                PORT
                )
              </option>
            </select>
            
          </span>
        </div>
      </div>
      <div
        className="col-sm-1"
      />
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-2 col-sm-offset-10"
      >
        <button
          className="Button-c9cbmb-0 GLfOY btn btn-primary"
          disabled={true}
          type="submit"
        >
          Apply
        </button>
      </div>
    </div>
  </form>
  <div
    className="row"
  >
    <div
      className="col-sm-10 col-sm-offset-1"
    >
      <div>
        <div
          className="row "
        >
          <div
            className="col-md-12"
          >
            <div
              className="data-table table-responsive"
              id="config-key-list"
            >
              <table
                className="table "
              >
                <thead>
                  <tr>
                    <th>
                      Config Key
                    </th>
                    <th>
                      Parameter
                    </th>
                    <th>
                      Action
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      configuration.port
                    </td>
                    <td>
                      PORT
                    </td>
                    <td />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
